Percentiles multiple stations

--- a/notebooks/Matroos2EE.ipynb
+++ b/notebooks/Matroos2EE.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Waterlevel stations\n",
+    "Convert data from http://matroos.deltares.nl/timeseries/start/ (noos output) into a format that can be used in Google Fusiontable\n",
+    "* Terschelling Noordzee (53.44248608°N, 005.33303479°E)\n",
+    "* Delfzijl (53.32635727°E,6.93312255°N)\n",
+    "* Haringvliet 10 (51.86313430°N, 3.86077225°E)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -16,35 +27,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfTerschelling = pd.read_csv('ObservedWaterlevelTerschelling.txt',skiprows=13, delimiter=';')\n",
-    "dfTerschelling['time'] = pd.to_datetime(dfTerschelling['time'],yearfirst=True,format='%Y%m%d%H%M')\n",
-    "dfTerschelling.set_index('time', inplace=True)\n",
-    "dfTerschelling['waterlevel'][dfTerschelling['waterlevel'].isnull()] = np.nan\n",
-    "dfTerschelling.dropna(inplace=True)\n",
-    "dfTerschelling.to_csv('ObservedWaterlevelTerschellingMODIFIED.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "239708"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Terschelling\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\hagenaar\\AppData\\Local\\Continuum\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delfzijl\n",
+      "Haringvliet\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "stations = ['Terschelling','Delfzijl','Haringvliet']\n",
+    "\n",
+    "for station in stations:\n",
+    "    print station\n",
+    "    df = pd.read_csv(r'D:\\hagenaar\\Documents\\EMODNET\\GLOSSISgrid\\ObservedWaterlevel' + str(station) + '.txt', \n",
+    "                     skiprows=13, delimiter='  ', names=['time','waterlevel'])\n",
+    "    \n",
+    "    df['time'] = pd.to_datetime(df['time'], yearfirst=True, format='%Y%m%d%H%M')\n",
+    "    df.set_index('time', inplace=True)\n",
+    "    df['waterlevel'][df['waterlevel'].isnull()] = np.nan\n",
+    "    df['waterlevel'][df['waterlevel'] == 9999999] # missing value\n",
+    "    df.dropna(inplace=True)\n",
+    "    df.to_csv(r'D:\\hagenaar\\Documents\\EMODNET\\GLOSSISgrid\\ObservedWaterlevel' + str(station) + 'MODIFIED.txt')"
+   ]
   },
   {
    "cell_type": "code",
