--- a/notebooks/Jetski2EE.ipynb
+++ b/notebooks/Jetski2EE.ipynb
@@ -2,94 +2,91 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'osgeo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-9c30d6526832>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnetCDF4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mosgeo\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgdal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mosgeo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgdalconst\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'osgeo'"
+     ]
+    }
+   ],
    "source": [
-    "import pathlib\n",
+    "# import pathlib\n",
     "\n",
     "import cmocean.cm\n",
     "import netCDF4\n",
     "import numpy as np\n",
+    "from osgeo import gdal\n",
+    "from osgeo.gdalconst import *\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors\n",
-    "import scipy.interpolate\n",
-    "import scipy.stats\n",
-    "\n",
     "\n",
     "%matplotlib inline\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# based on TUDelft repository\n",
-    "url = (['http://opendap.tudelft.nl/thredds/dodsC/data2/zandmotor/morphology/JETSKI/gridded/jetskikb118_3938.nc',\n",
+    "urls = (['http://opendap.tudelft.nl/thredds/dodsC/data2/zandmotor/morphology/JETSKI/gridded/jetskikb118_3938.nc',\n",
     "       'http://opendap.tudelft.nl/thredds/dodsC/data2/zandmotor/morphology/JETSKI/gridded/jetskikb118_3736.nc',\n",
     "       'http://opendap.tudelft.nl/thredds/dodsC/data2/zandmotor/morphology/JETSKI/gridded/jetskikb117_3938.nc'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grids = []\n",
+    "for url in urls:\n",
+    "    ds = netCDF4.Dataset(url)\n",
+    "    times = ds.variables['time'][:]\n",
+    "    arrs = []\n",
+    "    z = ds.variables['z'][:]\n",
+    "    x = ds.variables['x'][:]\n",
+    "    y = ds.variables['y'][:]\n",
+    "    grids.append({\n",
+    "        \"url\": url,\n",
+    "        \"x\": x,\n",
+    "        \"y\": y,\n",
+    "        \"z\": z,\n",
+    "        \"times\": times\n",
+    "    })\n",
+    "    ds.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([datetime.datetime(2012, 2, 25, 0, 0),\n",
-       "       datetime.datetime(2013, 3, 15, 0, 0),\n",
-       "       datetime.datetime(2013, 5, 15, 0, 0),\n",
-       "       datetime.datetime(2013, 7, 15, 0, 0),\n",
-       "       datetime.datetime(2013, 8, 30, 0, 0),\n",
-       "       datetime.datetime(2013, 12, 28, 0, 0),\n",
-       "       datetime.datetime(2014, 2, 28, 0, 0),\n",
-       "       datetime.datetime(2014, 5, 24, 0, 0),\n",
-       "       datetime.datetime(2014, 7, 4, 0, 0),\n",
-       "       datetime.datetime(2014, 9, 3, 0, 0),\n",
-       "       datetime.datetime(2014, 10, 30, 0, 0),\n",
-       "       datetime.datetime(2015, 2, 10, 0, 0),\n",
-       "       datetime.datetime(2015, 5, 23, 0, 0),\n",
-       "       datetime.datetime(2015, 7, 23, 0, 0),\n",
-       "       datetime.datetime(2015, 8, 1, 0, 0),\n",
-       "       datetime.datetime(2015, 9, 28, 0, 0),\n",
-       "       datetime.datetime(2016, 3, 12, 0, 0),\n",
-       "       datetime.datetime(2016, 5, 7, 0, 0),\n",
-       "       datetime.datetime(2016, 7, 19, 0, 0),\n",
-       "       datetime.datetime(2016, 9, 7, 0, 0)], dtype=object)"
+       "3"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds = netCDF4.Dataset(url[0])\n",
-    "times = netCDF4.num2date(ds.variables['time'][:], ds.variables['time'].units)\n",
-    "times"
+    "len(grids)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http:/opendap.tudelft.nl/thredds/dodsC/data2/zandmotor/morphology/JETSKI/gridded/jetskikb118_3938.nc'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
