--- a/notebooks/Jetski2EE.ipynb
+++ b/notebooks/Jetski2EE.ipynb
@@ -2,58 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named 'osgeo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-9c30d6526832>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnetCDF4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mosgeo\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgdal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mosgeo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgdalconst\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'osgeo'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# import pathlib\n",
-    "\n",
-    "import cmocean.cm\n",
+    "%matplotlib inline\n",
+    "import subprocess\n",
     "import netCDF4\n",
     "import numpy as np\n",
     "from osgeo import gdal\n",
     "from osgeo.gdalconst import *\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors\n",
-    "\n",
-    "%matplotlib inline\n"
+    "import pytz\n",
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NetCDF Windows library is buggy! Download files manually from:\n",
+    "http://opendap.tudelft.nl/thredds/data2/zandmotor/morphology/JETSKI/gridded/catalog.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# based on TUDelft repository\n",
-    "urls = (['http://opendap.tudelft.nl/thredds/dodsC/data2/zandmotor/morphology/JETSKI/gridded/jetskikb118_3938.nc',\n",
-    "       'http://opendap.tudelft.nl/thredds/dodsC/data2/zandmotor/morphology/JETSKI/gridded/jetskikb118_3736.nc',\n",
-    "       'http://opendap.tudelft.nl/thredds/dodsC/data2/zandmotor/morphology/JETSKI/gridded/jetskikb117_3938.nc'])\n"
+    "urls = ([\n",
+    "    '../data/Jetski/jetskikb118_3736.nc',\n",
+    "    '../data/Jetski/jetskikb118_3938.nc',\n",
+    "    '../data/Jetski/jetskikb117_3938.nc'\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "grids = []\n",
     "for url in urls:\n",
     "    ds = netCDF4.Dataset(url)\n",
-    "    times = ds.variables['time'][:]\n",
+    "    times = netCDF4.num2date(ds.variables['time'][:], ds.variables['time'].units)\n",
+    "    local = pytz.timezone(\"Europe/Amsterdam\")\n",
+    "    times = [local.localize(t, is_dst=None).astimezone(pytz.utc) for t in times]\n",
     "    arrs = []\n",
     "    z = ds.variables['z'][:]\n",
     "    x = ds.variables['x'][:]\n",
@@ -70,22 +66,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "97"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(grids)"
+    "count = len(list(itertools.chain.from_iterable([g['times'] for g in grids])))\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ee_collection_path = 'users/gena/eo-bathymetry/sandengine_jetski'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run(cmd):\n",
+    "    print(cmd)\n",
+    "    # subprocess.call(cmd)"
    ]
   },
   {
@@ -93,12 +110,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "i = 0\n",
+    "for g in grids:\n",
+    "    ncols = len(g['x'])\n",
+    "    nrows = len(g['y'])\n",
+    "    cellsize = g['x'][1] - g['x'][0]\n",
+    "    xllcorner = np.min(g['x'])\n",
+    "    yllcorner = np.min(g['y'])\n",
+    "    nodata_value = -9999\n",
+    "\n",
+    "    for t in g['times']:\n",
+    "        print('Processing time: {0}'.format(t))\n",
+    "        z = g['z']\n",
+    "        filename = 'bathymetry_jetski_' + str(i).rjust(3, '0')\n",
+    "        filepath = '../output/' + filename\n",
+    "        filepath_asc = filepath + '.asc'\n",
+    "        filepath_tif = filepath + '.tif'\n",
+    "        filename_tif = filename + '.tif'\n",
+    "\n",
+    "        z = z[i]\n",
+    "\n",
+    "        with open(filename_asc, 'w') as f:\n",
+    "            f.write('ncols {0}\\n'.format(ncols))\n",
+    "            f.write('nrows {0}\\n'.format(nrows))\n",
+    "            f.write('cellsize {0}\\n'.format(cellsize))\n",
+    "            f.write('xllcorner {0}\\n'.format(xllcorner))\n",
+    "            f.write('yllcorner {0}\\n'.format(yllcorner))\n",
+    "            f.write('nodata_value {0}\\n'.format(nodata_value))\n",
+    "            for row in np.flip(range(nrows), 0):\n",
+    "                s = ' '.join([str(v) for v in z[row,]]).replace('--', str(nodata_value))\n",
+    "                f.write(s)\n",
+    "                f.write('\\n')\n",
+    "\n",
+    "        cmd = 'gdal_translate -ot Float32 -a_srs EPSG:28992 -co COMPRESS=DEFLATE -co PREDICTOR=2 -co ZLEVEL=6 -of GTiff {0} {1}'\\\n",
+    "            .format(filepath_asc, filepath_tif)\n",
+    "        run(cmd)\n",
+    "        \n",
+    "        filepath_gs = 'gs://hydro-earth/sandengine/' + filename_tif\n",
+    "        \n",
+    "        cmd = 'gsutil cp {0} {1}'\\\n",
+    "            .format(filepath_tif, filepath_gs)\n",
+    "        run(cmd)\n",
+    "        \n",
+    "        filepath_ee = ee_collection_path + '/' + filename\n",
+    "        \n",
+    "        cmd = 'earthengine upload image --wait --asset_id={0} --nodata_value={1} {2}'\\\n",
+    "            .format(filepath_ee, nodata_value, filepath_gs)        \n",
+    "        run(cmd)\n",
+    "        \n",
+    "        time_start = int(grids[0]['times'][0].timestamp() * 1000)\n",
+    "        cmd = 'earthengine asset set --time_start {0} {1}'\\\n",
+    "            .format(time_start, filepath_ee)\n",
+    "        run(cmd)\n",
+    "        \n",
+    "    i = i + 1"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
