--- a/notebooks/Jetski2EE.ipynb
+++ b/notebooks/Jetski2EE.ipynb
@@ -107,51 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing time: 2011-08-02 22:00:00+00:00\n",
-      "gdal_translate -ot Float32 -a_srs EPSG:28992 -co COMPRESS=DEFLATE -co PREDICTOR=2 -co ZLEVEL=6 -of GTiff ../output/bathymetry_jetski_000.asc ../output/bathymetry_jetski_000.tif\n",
-      "D:/src/google-cloud-sdk/bin/gsutil.cmd cp ../output/bathymetry_jetski_000.tif gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n",
-      "earthengine upload image --wait --asset_id=users/gena/eo-bathymetry/sandengine_jetski/bathymetry_jetski_000 --nodata_value=-9999 gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n",
-      "earthengine asset set --time_start 1312322400000 users/gena/eo-bathymetry/sandengine_jetski/bathymetry_jetski_000\n",
-      "Processing time: 2011-09-03 22:00:00+00:00\n",
-      "gdal_translate -ot Float32 -a_srs EPSG:28992 -co COMPRESS=DEFLATE -co PREDICTOR=2 -co ZLEVEL=6 -of GTiff ../output/bathymetry_jetski_000.asc ../output/bathymetry_jetski_000.tif\n",
-      "D:/src/google-cloud-sdk/bin/gsutil.cmd cp ../output/bathymetry_jetski_000.tif gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n",
-      "earthengine upload image --wait --asset_id=users/gena/eo-bathymetry/sandengine_jetski/bathymetry_jetski_000 --nodata_value=-9999 gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n",
-      "earthengine asset set --time_start 1312322400000 users/gena/eo-bathymetry/sandengine_jetski/bathymetry_jetski_000\n",
-      "Processing time: 2011-10-15 22:00:00+00:00\n",
-      "gdal_translate -ot Float32 -a_srs EPSG:28992 -co COMPRESS=DEFLATE -co PREDICTOR=2 -co ZLEVEL=6 -of GTiff ../output/bathymetry_jetski_000.asc ../output/bathymetry_jetski_000.tif\n",
-      "D:/src/google-cloud-sdk/bin/gsutil.cmd cp ../output/bathymetry_jetski_000.tif gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n",
-      "earthengine upload image --wait --asset_id=users/gena/eo-bathymetry/sandengine_jetski/bathymetry_jetski_000 --nodata_value=-9999 gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n",
-      "earthengine asset set --time_start 1312322400000 users/gena/eo-bathymetry/sandengine_jetski/bathymetry_jetski_000\n",
-      "Processing time: 2011-11-11 23:00:00+00:00\n",
-      "gdal_translate -ot Float32 -a_srs EPSG:28992 -co COMPRESS=DEFLATE -co PREDICTOR=2 -co ZLEVEL=6 -of GTiff ../output/bathymetry_jetski_000.asc ../output/bathymetry_jetski_000.tif\n",
-      "D:/src/google-cloud-sdk/bin/gsutil.cmd cp ../output/bathymetry_jetski_000.tif gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n",
-      "earthengine upload image --wait --asset_id=users/gena/eo-bathymetry/sandengine_jetski/bathymetry_jetski_000 --nodata_value=-9999 gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n",
-      "earthengine asset set --time_start 1312322400000 users/gena/eo-bathymetry/sandengine_jetski/bathymetry_jetski_000\n",
-      "Processing time: 2011-12-30 23:00:00+00:00\n",
-      "gdal_translate -ot Float32 -a_srs EPSG:28992 -co COMPRESS=DEFLATE -co PREDICTOR=2 -co ZLEVEL=6 -of GTiff ../output/bathymetry_jetski_000.asc ../output/bathymetry_jetski_000.tif\n",
-      "D:/src/google-cloud-sdk/bin/gsutil.cmd cp ../output/bathymetry_jetski_000.tif gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n",
-      "earthengine upload image --wait --asset_id=users/gena/eo-bathymetry/sandengine_jetski/bathymetry_jetski_000 --nodata_value=-9999 gs://hydro-earth/sandengine/bathymetry_jetski_000.tif\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-de932d197ba2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0mfilepath_ee\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mee_collection_path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0mcmd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'earthengine upload image --wait --asset_id={0} --nodata_value={1} {2}'\u001b[0m            \u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_ee\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnodata_value\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilepath_gs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0mtime_start\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrids\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'times'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtimestamp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m1000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-11-f888d64eedaf>\u001b[0m in \u001b[0;36mrun\u001b[0;34m(cmd)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0msubprocess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32mC:\\Program Files\\Anaconda3\\lib\\subprocess.py\u001b[0m in \u001b[0;36mcall\u001b[0;34m(timeout, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    557\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mPopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mpopenargs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    558\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 559\u001b[0;31m             \u001b[1;32mreturn\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    560\u001b[0m         \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    561\u001b[0m             \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkill\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Program Files\\Anaconda3\\lib\\subprocess.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout, endtime)\u001b[0m\n\u001b[1;32m   1273\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreturncode\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1274\u001b[0m                 result = _winapi.WaitForSingleObject(self._handle,\n\u001b[0;32m-> 1275\u001b[0;31m                                                     timeout_millis)\n\u001b[0m\u001b[1;32m   1276\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0m_winapi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWAIT_TIMEOUT\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1277\u001b[0m                     \u001b[1;32mraise\u001b[0m \u001b[0mTimeoutExpired\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Processing time: 2011-08-02 22:00:00+00:00\n"
      ]
     }
    ],
@@ -213,7 +176,7 @@
     "            .format(filepath_ee)\n",
     "        run(cmd)\n",
     "\n",
-    "    i = i + 1"
+    "        i = i + 1"
    ]
   }
  ],
