--- a/notebooks/Lidar2EE.ipynb
+++ b/notebooks/Lidar2EE.ipynb
@@ -212,8 +212,7 @@
     "        \n",
     "        filepath_gs = 'gs://hydro-earth/sandengine/' + filename_tif\n",
     "        \n",
-    "        gsutil = 'D:/src/google-cloud-sdk/bin/gsutil.cmd' # relative path is not defined on Windows\n",
-    "        cmd = gsutil + ' cp {0} {1}'\\\n",
+    "        cmd = 'gsutil cp {0} {1}'\\\n",
     "            .format(filepath_tif, filepath_gs)\n",
     "        run(cmd)\n",
     "        \n",
