extend for 2d data

--- a/notebooks/Matroos2EE.ipynb
+++ b/notebooks/Matroos2EE.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "## Waterlevel stations\n",
     "Convert data from http://matroos.deltares.nl/timeseries/start/ (noos output) into a format that can be used in Google Fusiontable\n",
-    "* Terschelling Noordzee (53.44248608°N, 005.33303479°E)\n",
-    "* Delfzijl (53.32635727°E,6.93312255°N)\n",
-    "* Haringvliet 10 (51.86313430°N, 3.86077225°E)"
+    "* Terschelling Noordzee (53.443625°N, 5.333456°E)\n",
+    "* Delfzijl (53.327481°N,6.933787°E)\n",
+    "* Nes (53.431108°N, 5.760944°E)\n",
+    "* Harlingen (53.176742°N, 5.409777°E)\n",
+    "* Haringvliet 10 (51.863753°N, 3.860380°E)\n"
    ]
   },
   {
@@ -39,25 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(print station)? (<ipython-input-3-7272d5a3464a>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-7272d5a3464a>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    print station\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(print station)?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def readCSVforFusionTable():\n",
     "    # Here keeping the source of Gerben's fnc.\n",
     "    stations = ['Terschelling','Delfzijl','Haringvliet']\n",
     "\n",
     "    for station in stations:\n",
-    "        print station\n",
+    "        print (station)\n",
     "        df = pd.read_csv(r'D:\\hagenaar\\Documents\\EMODNET\\GLOSSISgrid\\ObservedWaterlevel' + str(station) + '.txt', \n",
     "                         skiprows=13, delimiter='  ', names=['time','waterlevel'])\n",
     "\n",
@@ -78,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +168,7 @@
    "source": [
     "cc = {}\n",
     "\n",
-    "# This could take several minutes or hours for 6years, make it year by year to improve performance.\n",
+    "# This could take several minutes, make it year by year to improve performance.\n",
     "\n",
     "for loc, loc_id0 in listbuoys.items():  # get water level signal for each buoy\n",
     "    c_df_tot = pd.DataFrame() # empty db\n",
@@ -241,6 +234,134 @@
     "for dfll_t, dfll_v in cc.items():\n",
     "    dfll_v.to_csv(os.path.join(PATH,dfll_t.replace(' ','_'))+'.csv', sep=',', index=False, na_rep='NaN')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Waterlevel from Zuno Model\n",
+    "Convert data from http://matroos.deltares.nl/maps2d/start/ into a format that can be used later on.\n",
+    "\n",
+    "* dd zuno-v4 hirlam kf. Pick subarea in Wadden Sea (5.0048,53.1737,5.7354,53.5115)\n",
+    "* dd zuno-v4 hirlam kf. Pick subarea in Western Scheldt (3.2484,51.3784,3.9817,51.7625)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = '/tmp'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bbox = {'waddenSea': [5.0048, 53.1737, 5.7354, 53.5115], 'westernScheldt': [3.2484, 51.3784, 3.9817, 51.7625]}\n",
+    "\n",
+    "modelname = 'dcsmv6_zunov4_zuno_kf_hirlam'\n",
+    "\n",
+    "t0 = datetime.datetime(2018, 1, 1)\n",
+    "tf = datetime.datetime(2018, 4, 1)\n",
+    "\n",
+    "tnow = datetime.datetime.now().isoformat().replace('T','+')\n",
+    "tstart = t0.isoformat().replace('-','').replace('T','').replace(':','') # start time\n",
+    "tend = tf.isoformat().replace('-','').replace('T','').replace(':','') # end time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This could take several minutes, make it year by year to improve performance.\n",
+    "\n",
+    "for bboxloc, bboxloc_id0 in bbox.items():  # get water level signal for each buoy\n",
+    "    c_df_tot = pd.DataFrame() # empty db\n",
+    "    ti_dum = t0\n",
+    "    #while ti_dum<tf:\n",
+    "    te_dum = tf\n",
+    "        \n",
+    "    # reconvert before request\n",
+    "    ti_dum_text = ti_dum.isoformat().replace('T','+')\n",
+    "    te_dum_text = te_dum.isoformat().replace('T','+')\n",
+    "\n",
+    "    # in the following template,  loc_id0 is the location, source_newid0 is the \"observed\" type of source\n",
+    "    additional_params = \"\"\n",
+    "    url = (\"http://matroos.deltares.nl/direct/get_subgrid_ascii.php?\"\n",
+    "                        \"source=\" + modelname + \"&\"  # this is the model name\n",
+    "                        \"unit=SEP&\" \n",
+    "                        \"tstart=\" + tstart + \"&\"\n",
+    "                        \"tstop=\" + tend + \"&\"\n",
+    "                        \"xmin=\" + str(bboxloc_id0[0]) + \"&\"\n",
+    "                        \"xmax=\" + str(bboxloc_id0[2]) + \"&\"\n",
+    "                        \"ymin=\" + str(bboxloc_id0[1]) + \"&\"\n",
+    "                        \"ymax=\" + str(bboxloc_id0[3]) + \"&\"\n",
+    "                        \"coordsys=wgs84\"\n",
+    "                        + additional_params)\n",
+    "    \n",
+    "    r = requests.get(url).content\n",
+    "    c = pd.read_csv(io.StringIO(r.decode('utf-8')),sep='\\t', header=0)\n",
+    "    #c_head = c[0:15]\n",
+    "    # print(c_head[4:6]+'\\n') # query location, if needed\n",
+    "    print(bboxloc + ' - ' + 'from ' + ti_dum_text + ' to ' + te_dum_text)\n",
+    "    #c_cont = c[16:].reset_index(drop=True) # reset index\n",
+    "\n",
+    "    # # get time and z from df\n",
+    "    #c_t = c_cont.applymap(lambda x: datetime.datetime(\n",
+    "    #    int(x.split()[0][0:4]),\n",
+    "    #    int(x.split()[0][4:6]),\n",
+    "    #    int(x.split()[0][6:8]),\n",
+    "    #    int(x.split()[0][8:10]),\n",
+    "    #    int(x.split()[0][10:12])))\n",
+    "    #c_t.columns = ['Time']\n",
+    "\n",
+    "    #c_z = c_cont.applymap(lambda x: df_get_values(x,np.NaN))\n",
+    "    #c_z.columns = ['WaterLevel']\n",
+    "\n",
+    "    #c_df = c_t.join(c_z)\n",
+    "    #c_df_tot = c_df_tot.append(c_df)\n",
+    "\n",
+    "    # df of file - # you can save it anywhere from here.\n",
+    "    c.to_csv(os.path.join(PATH,bboxloc)+'.csv', sep=',', index=False, na_rep='NaN')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save dict of df's into several files [per location], csv format.\n",
+    "for dfll_t, dfll_v in cc.items():\n",
+    "    dfll_v.to_csv(os.path.join(PATH,dfll_t.replace(' ','_'))+'.csv', sep=',', index=False, na_rep='NaN')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'ERROR: no data found for model dcsmv6_zunov4_zuno_kf_hirlam between dcsmv6_zunov and dcsmv6_zunov\\n'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r"
    ]
   },
   {
