add download for 2d modeled tidal data

--- a/notebooks/Matroos2EE.ipynb
+++ b/notebooks/Matroos2EE.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,39 +266,51 @@
     "\n",
     "modelname = 'dcsmv6_zunov4_zuno_kf_hirlam'\n",
     "\n",
-    "t0 = datetime.datetime(2018, 1, 1)\n",
-    "tf = datetime.datetime(2018, 4, 1)\n",
+    "t0_N = datetime.datetime(2017, 9, 3, 10, 50, 0)\n",
+    "t0_S = datetime.datetime(2016, 9, 8, 10, 50, 0)\n",
+    "\n",
+    "tf_N = t0_N + datetime.timedelta(minutes = 10)\n",
+    "tf_S = t0_S + datetime.timedelta(minutes = 10)\n",
     "\n",
     "tnow = datetime.datetime.now().isoformat().replace('T','+')\n",
-    "tstart = t0.isoformat().replace('-','').replace('T','').replace(':','') # start time\n",
-    "tend = tf.isoformat().replace('-','').replace('T','').replace(':','') # end time\n"
+    "tstart_N = t0_N.isoformat().replace('-','').replace('T','').replace(':','') # start time\n",
+    "tstart_S = t0_S.isoformat().replace('-','').replace('T','').replace(':','') # start time\n",
+    "tend_N = tf_N.isoformat().replace('-','').replace('T','').replace(':','') # end time\n",
+    "tend_S = tf_S.isoformat().replace('-','').replace('T','').replace(':','') # end time\n",
+    "\n",
+    "tstart = [tstart_N, tstart_S]\n",
+    "tend = [tend_N, tend_S]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://matroos.deltares.nl/direct/get_subgrid_ascii.php?source=dcsmv6_zunov4_zuno_kf_hirlam&unit=SEP&tstart=20170903105000&tstop=20170903110000&xmin=5.0048&xmax=5.7354&ymin=53.1737&ymax=53.5115&coordsys=wgs84\n",
+      "waddenSea - from 2017-09-03+10:50:00 to 2017-09-03+11:00:00\n",
+      "http://matroos.deltares.nl/direct/get_subgrid_ascii.php?source=dcsmv6_zunov4_zuno_kf_hirlam&unit=SEP&tstart=20160908105000&tstop=20160908110000&xmin=3.2484&xmax=3.9817&ymin=51.3784&ymax=51.7625&coordsys=wgs84\n",
+      "westernScheldt - from 2017-09-03+10:50:00 to 2017-09-03+11:00:00\n"
+     ]
+    }
+   ],
    "source": [
-    "# This could take several minutes, make it year by year to improve performance.\n",
+    "# This could take several minutes. A single year weights TBs' thus not recommended.\n",
     "\n",
+    "cc = 0\n",
     "for bboxloc, bboxloc_id0 in bbox.items():  # get water level signal for each buoy\n",
     "    c_df_tot = pd.DataFrame() # empty db\n",
-    "    ti_dum = t0\n",
-    "    #while ti_dum<tf:\n",
-    "    te_dum = tf\n",
-    "        \n",
-    "    # reconvert before request\n",
-    "    ti_dum_text = ti_dum.isoformat().replace('T','+')\n",
-    "    te_dum_text = te_dum.isoformat().replace('T','+')\n",
     "\n",
-    "    # in the following template,  loc_id0 is the location, source_newid0 is the \"observed\" type of source\n",
     "    additional_params = \"\"\n",
     "    url = (\"http://matroos.deltares.nl/direct/get_subgrid_ascii.php?\"\n",
     "                        \"source=\" + modelname + \"&\"  # this is the model name\n",
     "                        \"unit=SEP&\" \n",
-    "                        \"tstart=\" + tstart + \"&\"\n",
-    "                        \"tstop=\" + tend + \"&\"\n",
+    "                        \"tstart=\" + tstart[cc] + \"&\"\n",
+    "                        \"tstop=\" + tend[cc] + \"&\"\n",
     "                        \"xmin=\" + str(bboxloc_id0[0]) + \"&\"\n",
     "                        \"xmax=\" + str(bboxloc_id0[2]) + \"&\"\n",
     "                        \"ymin=\" + str(bboxloc_id0[1]) + \"&\"\n",
@@ -306,30 +318,16 @@
     "                        \"coordsys=wgs84\"\n",
     "                        + additional_params)\n",
     "    \n",
+    "    print(url)\n",
     "    r = requests.get(url).content\n",
     "    c = pd.read_csv(io.StringIO(r.decode('utf-8')),sep='\\t', header=0)\n",
-    "    #c_head = c[0:15]\n",
-    "    # print(c_head[4:6]+'\\n') # query location, if needed\n",
+    "\n",
     "    print(bboxloc + ' - ' + 'from ' + ti_dum_text + ' to ' + te_dum_text)\n",
-    "    #c_cont = c[16:].reset_index(drop=True) # reset index\n",
-    "\n",
-    "    # # get time and z from df\n",
-    "    #c_t = c_cont.applymap(lambda x: datetime.datetime(\n",
-    "    #    int(x.split()[0][0:4]),\n",
-    "    #    int(x.split()[0][4:6]),\n",
-    "    #    int(x.split()[0][6:8]),\n",
-    "    #    int(x.split()[0][8:10]),\n",
-    "    #    int(x.split()[0][10:12])))\n",
-    "    #c_t.columns = ['Time']\n",
-    "\n",
-    "    #c_z = c_cont.applymap(lambda x: df_get_values(x,np.NaN))\n",
-    "    #c_z.columns = ['WaterLevel']\n",
-    "\n",
-    "    #c_df = c_t.join(c_z)\n",
-    "    #c_df_tot = c_df_tot.append(c_df)\n",
     "\n",
     "    # df of file - # you can save it anywhere from here.\n",
-    "    c.to_csv(os.path.join(PATH,bboxloc)+'.csv', sep=',', index=False, na_rep='NaN')\n"
+    "    c.to_csv(os.path.join(PATH,bboxloc)+'.csv', sep=',', index=False, na_rep='NaN')\n",
+    "    \n",
+    "    cc += 1\n"
    ]
   },
   {
@@ -339,29 +337,9 @@
    "outputs": [],
    "source": [
     "# save dict of df's into several files [per location], csv format.\n",
-    "for dfll_t, dfll_v in cc.items():\n",
-    "    dfll_v.to_csv(os.path.join(PATH,dfll_t.replace(' ','_'))+'.csv', sep=',', index=False, na_rep='NaN')\n",
+    "#for dfll_t, dfll_v in cc.items():\n",
+    "#    dfll_v.to_csv(os.path.join(PATH,dfll_t.replace(' ','_'))+'.csv', sep=',', index=False, na_rep='NaN')\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'ERROR: no data found for model dcsmv6_zunov4_zuno_kf_hirlam between dcsmv6_zunov and dcsmv6_zunov\\n'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r"
    ]
   },
   {
