switch to local tracks data

--- a/notebooks/icesat2-02-smoothing.ipynb
+++ b/notebooks/icesat2-02-smoothing.ipynb
@@ -51,7 +51,7 @@
    ],
    "source": [
     "dates = requests.get('https://openaltimetry.org/data/icesat2/getTrackDate').json()\n",
-    "tracks = gpd.read_file(r\"P:\\11202747-impact-based-forecasting\\04_GlobalBathy2020\\CODE\\ICESAT2\\trackDATA\\icesat2_tracks.shp\")\n",
+    "tracks = gpd.read_file(r\"../data/icesat-2/icesat2_tracks.shp\")\n",
     "\n",
     "crs = {'init': 'epsg:4326'}\n",
     "extents = [5.35,53.4,6.2,53.5]\n",
@@ -522,13 +522,7 @@
       "Reading data for beam: gt1r\n",
       "Reading data for beam: gt1l\n",
       "1357 2019-03-27\n",
-      "Requesting data from OA\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Requesting data from OA\n",
       "Reading data for beam: gt3r\n",
       "Available\n",
       "Available\n",
@@ -675,9 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4055,9 +4047,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
