--- a/notebooks/icesat2-01-download.ipynb
+++ b/notebooks/icesat2-01-download.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,16 +478,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['track_id', 'date', 'beam', 'series', 'x', 'y', 'h'], dtype='object')"
+       "Index(['track_id', 'date', 'beam', 'series', 'h', 'lon', 'lat'], dtype='object')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
