--- a/notebooks/icesat2-03-occurrence.ipynb
+++ b/notebooks/icesat2-03-occurrence.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,20 +135,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55.593698\n"
+      "track_id            69\n",
+      "date        2019-01-01\n",
+      "beam              gt3r\n",
+      "series            High\n",
+      "x              55.5937\n",
+      "y               8.5166\n",
+      "h              80.1722\n",
+      "Name: 665, dtype: object\n"
      ]
     }
    ],
    "source": [
     "for i, row in df_high.iterrows():\n",
-    "    print(row.x)\n",
+    "    print(row)\n",
     "    break"
    ]
   },
